@@ -30,6 +30,7 @@ public class BiomeExodusRockyHills extends BiomeExodusBase {
 		props.setHeightVariation(0.5F);
 		props.setTemperature(4.0F);
 		this.biomeDecor.exodusTallGrassPerChunk = 0;
+		this.biomeDecor.astersPerChunk = 0;
 		this.setTemp(6F);
 		this.setBiomeHeight(72);
 		this.setBiomeType(EnumBiomeTypeZG.ROCKY);
