@@ -364,6 +364,7 @@ tile.exodusdiamondore.name=Exodus Diamond Ore
 tile.exodusredstoneore.name=Exodus Redstone Ore
 tile.exoduscopperore.name=Exodus Copper Ore
 tile.exodusrock.name=Exodus Rock
+tile.aster.name=Galaxy Aster
 
 tile.endrock.name=Endrock
 
