@@ -17,4 +17,5 @@ Zollern Galaxy v2.0.22
 * Updated Exodus Redstone Ore texture.
 * Added the "Lake of Fire" biome to Kriffon.
 * Added the "Rocky Hills" biome to Exodus.
+* Added "Galaxy Aster" flowers to Exodus.
 * 
